--- a/src/root/auth.tt
+++ b/src/root/auth.tt
@@ -97,4 +97,24 @@
     </script>
   [% END %]
 
+  [% IF c.config.oauth_url %]
+    <script>
+      function onOauthSignIn(oauthUser) {
+        requestJSON({
+          url: "[% c.uri_for('/oauth-login') %]",
+          data: "id_token=" + googleUser.getAuthResponse().id_token,
+          type: 'POST',
+          success: function(data) {
+            window.location.reload();
+          }
+        });
+        return false;
+        };
+
+      $("#google-signin").click(function() {
+        $(".g-signin2:first-child > div").click();
+      });
+    </script>
+  [% END %]
+
 [% END %]
