--- a/src/root/topbar.tt
+++ b/src/root/topbar.tt
@@ -141,6 +141,10 @@
         <a class="dropdown-item" href="/github-redirect?after=[% c.req.path %]">Sign in with GitHub</a>
         <div class="dropdown-divider"></div>
       [% END %]
+      [% IF c.config.oauth_url %]
+        <a class="dropdown-item" href="/oauth-redirect?after=[% c.req.path %]">Sign in with OAuth</a>
+        <div class="dropdown-divider"></div>
+      [% END %]
       <a class="dropdown-item" href="#hydra-signin" data-toggle="modal">Sign in with a Hydra account</a>
     [% END %]
   [% END %]
